Fix race embed primary overflow bug, fixes POP-67

--- a/components/EmbedPage/EmbedPage.module.scss
+++ b/components/EmbedPage/EmbedPage.module.scss
@@ -15,7 +15,8 @@
   .preview {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
-    max-width: 512px;
+    min-width: 512px;
+    max-width: fit-content;
     position: sticky;
     top: 2rem;
     align-self: start;
